Revisions to navbar and sidebar

--- a/research/index.html
+++ b/research/index.html
@@ -16,11 +16,11 @@
 </head>
 <body>
 <nav class="lcr">
-    <div>&nbsp;</div>
+    <div>
+        <a href="../index.html"><h1>Cole Brauer</h1></a>
+    </div>
     <div>&nbsp;</div>
     <div>
-        <a href="../index.html"><i class="fas fa-arrow-left accent-color"></i></a>
-        <div class="icon-spacer">&nbsp;</div>
         <a href="javascript:openMenu();"><i class="fas fa-bars accent-color" id="menu-open"></i></a>
         <a href="javascript:closeMenu();"><i class="fas fa-times accent-color" id="menu-close"></i></a>
     </div>
@@ -48,10 +48,10 @@
         </div>
     </div>
 </div>
-<div class="nav-spacer">&nbsp;</div>
 <div class="lcr">
     <div class="hide-on-mobile" id="sidebar-container"> <!-- Sidebar -->
-        <div class="bg-dark" id="sidebar">
+        <div class="nav-spacer">&nbsp;</div>
+        <div class="bg-dark shadow1" id="sidebar">
             <h4><a href="#research">Research</a></h4>
             <ul>
                 <li>
@@ -71,6 +71,7 @@
         </div>
     </div>
     <div> <!-- Main Content -->
+        <div class="nav-spacer">&nbsp;</div>
         <section class="grid" id="research">
             <div class="grid-cell-full">
                 <h2>Research</h2>
@@ -100,7 +101,7 @@
                     <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" target="_blank">Google Scholar Profile</a>.</p>
             </div>
             <div class="grid-cell-full grid-cell-third-desktop">
-                <img src="voxel-joint.png" alt="3d printed robot joint">
+                <img class="shadow1" src="voxel-joint.png" alt="3d printed robot joint">
             </div>
             <hr/>
         </section>
@@ -119,10 +120,10 @@
                 <p>I am leading the design of the pods and release systems for this project.</p>
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img src="earthpod-1.jpg" alt="large sensor pod">
+                <img class="shadow1" src="earthpod-1.jpg" alt="large sensor pod">
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img src="earthpod-2.jpg" alt="small 3d printed sensor pod">
+                <img class="shadow1" src="earthpod-2.jpg" alt="small 3d printed sensor pod">
             </div>
             <div class="grid-cell-full" id="udrone">
                 <h5>uDrone</h5>
@@ -131,16 +132,16 @@
                 <p>I assisted with the design and fabrication of the internal structure and sensor mounting hardware.</p>
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img src="udrone-1.jpg" alt="underwater robot side view">
+                <img class="shadow1" src="udrone-1.jpg" alt="underwater robot side view">
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img src="udrone-2.jpg" alt="underwater robot front view">
+                <img class="shadow1" src="udrone-2.jpg" alt="underwater robot front view">
             </div>
-            <hr/>
         </section>
     </div>
     <div>&nbsp;</div> <!--Right column-->
 </div>
+<hr/>
 <footer>
     <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" class="social-icon" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
     <a href="https://github.com/cdbrauer" class="social-icon" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
