--- a/startups/index.html
+++ b/startups/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 <nav class="lcr">
-    <div>&nbsp;</div>
+    <div>
+        <a href="../index.html"><h1>Cole Brauer</h1></a>
+    </div>
     <div>&nbsp;</div>
     <div>
         <a href="javascript:openMenu();"><i class="fas fa-bars accent-color" id="menu-open"></i></a>
