Added code page, fixed some home page images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>C Brauer</title>
+    <title>Cole Brauer</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="img/icon.ico" rel="shortcut icon" type="image/x-icon">
@@ -154,16 +154,16 @@
                 <img src="projects/robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
                 <h4>Simulink Compatible Robot Platform</h4>
             </a>
-            <a href="projects/cad/index.html#" class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
-
-                <h4>CAD Highlight</h4>
+            <a href="projects/cad/index.html#tarot680" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+                <img src="projects/cad/tarot680.png" class="photo" alt="drone frame cad model"/>
+                <h4>Tarot 680 Drone Frame Model</h4>
             </a>
-            <a href="projects/code/index.html#" class="grid-cell-full grid-cell-quarter-desktop card bg-dark hide-on-mobile">
-
-                <h4>Code Highlight</h4>
+            <a href="projects/code/index.html#voxelfuse" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+                <img src="projects/code/voxelfuse.jpg" class="photo" alt="voxel model">
+                <h4>VoxelFuse Library</h4>
             </a>
             <a href="projects/other/index.html#fft" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
-                <img src="projects/other/fft.jpg" class="photo" alt="fft analyzer device"/>
+                <img src="projects/other/fft-w.jpg" class="photo" alt="fft analyzer device"/>
                 <h4>Arduino-Based FFT Analyzer</h4>
             </a>
         </div>
