--- a/research/index.html
+++ b/research/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>C Brauer</title>
+    <title>Cole Brauer</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="../img/icon.ico" rel="shortcut icon" type="image/x-icon">
@@ -17,7 +17,7 @@
 <body>
 <nav class="lcr">
     <div>
-        <a href="../index.html"><h1>Cole Brauer</h1></a>
+        <a href="../index.html"><h1 class="hide-on-mobile">Cole Brauer</h1></a>
     </div>
     <div>&nbsp;</div>
     <div>
@@ -101,7 +101,7 @@
                     <a href="https://scholar.google.com/citations?user=VJ-As98AAAAJ&hl=en" target="_blank">Google Scholar Profile</a>.</p>
             </div>
             <div class="grid-cell-full grid-cell-third-desktop">
-                <img class="shadow1" src="voxel-joint.png" alt="3d printed robot joint">
+                <img class="" src="voxel-joint.png" alt="3d printed robot joint">
             </div>
             <hr/>
         </section>
@@ -120,10 +120,10 @@
                 <p>I am leading the design of the pods and release systems for this project.</p>
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img class="shadow1" src="earthpod-1.jpg" alt="large sensor pod">
+                <img class="" src="earthpod-1.jpg" alt="large sensor pod">
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img class="shadow1" src="earthpod-2.jpg" alt="small 3d printed sensor pod">
+                <img class="" src="earthpod-2.jpg" alt="small 3d printed sensor pod">
             </div>
             <div class="grid-cell-full" id="udrone">
                 <h5>uDrone</h5>
@@ -132,14 +132,14 @@
                 <p>I assisted with the design and fabrication of the internal structure and sensor mounting hardware.</p>
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img class="shadow1" src="udrone-1.jpg" alt="underwater robot side view">
+                <img class="" src="udrone-1.jpg" alt="underwater robot side view">
             </div>
             <div class="grid-cell-full grid-cell-half-desktop">
-                <img class="shadow1" src="udrone-2.jpg" alt="underwater robot front view">
+                <img class="" src="udrone-2.jpg" alt="underwater robot front view">
             </div>
         </section>
     </div>
-    <div>&nbsp;</div> <!--Right column-->
+    <div class="hide-on-mobile">&nbsp;</div> <!--Right column-->
 </div>
 <hr/>
 <footer>
