--- a/startups/index.html
+++ b/startups/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>C Brauer</title>
+    <title>Cole Brauer</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <link href="../img/icon.ico" rel="shortcut icon" type="image/x-icon">
@@ -17,7 +17,7 @@
 <body>
 <nav class="lcr">
     <div>
-        <a href="../index.html"><h1>Cole Brauer</h1></a>
+        <a href="../index.html"><h1 class="hide-on-mobile">Cole Brauer</h1></a>
     </div>
     <div>&nbsp;</div>
     <div>
