--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <img src="projects/robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
                 <h4>Simulink Compatible Robot Platform</h4>
             </a>
-            <a href="projects/cad/index.html#tarot680" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+            <a href="projects/cad/index.html#grabcad" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="projects/cad/tarot680.png" class="photo" alt="drone frame cad model"/>
                 <h4>Tarot 680 Drone Frame Model</h4>
             </a>
