Updates to CAD and Code pages

--- a/projects/cad/index.html
+++ b/projects/cad/index.html
@@ -70,14 +70,14 @@
     </div>
     <div> <!-- Main Content -->
         <div class="nav-spacer">&nbsp;</div>
-        <section class="grid">
-            <div class="grid-cell-full" id="cad">
+        <section class="grid" id="cad">
+            <div class="grid-cell-full">
                 <h2>CAD</h2>
                 <hr/>
             </div>
         </section>
-        <section class="grid">
-            <div class="grid-cell-full" id="grabcad">
+        <section class="grid" id="grabcad">
+            <div class="grid-cell-full">
                 <h3>GrabCAD</h3>
             </div>
             <div class="grid-cell-full">
@@ -109,8 +109,9 @@
                 <h4>Chameleon3 Camera</h4>
             </div>
             <hr/>
-
-            <div class="grid-cell-full" id="vex">
+        </section>
+        <section class="grid" id="vex">
+            <div class="grid-cell-full">
                 <h3>VEX Online Design Challenges</h3>
             </div>
 
@@ -155,7 +156,7 @@
                 <img src="belt-drive-3.jpg" alt="3d printed belt drive kit"/>
             </div>
 
-            <div class="grid-cell-full grid-cell-third-desktop" id="rwars">
+            <div class="grid-cell-full" id="rwars">
                 <h5>R-WARS</h5>
                 <p>This is my 3rd place winning entry for the <a href="http://challenges.robotevents.com/challenge/37/entry/1398" target="_blank">2014 Autodesk Sustainable Design Challenge</a>.</p>
                 <p>Much of the waste thrown in the trash today is usable through recycling or as compost. Instead, it is
@@ -164,10 +165,17 @@
                     (Robotic Waste Recycling System) is a solution to these problems.</p>
                 <p><a href="R-CROP.pdf" target="_blank">PDF Documentation</a></p>
             </div>
-            <img class="grid-cell-full grid-cell-third-desktop" src="rwars-1.png" alt="cad model of the r-wars system"/>
-            <img class="grid-cell-full grid-cell-third-desktop" src="rwars-2.png" alt="sustainable features of the r-wars system"/>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rwars-1.png" alt="cad model of the r-wars system"/>
+            </div>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rwars-2.png" alt="sustainable features of the r-wars system"/>
+            </div>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rwars-3.png" alt="operation of the r-wars system"/>
+            </div>
 
-            <div class="grid-cell-full grid-cell-third-desktop" id="rcrop">
+            <div class="grid-cell-full" id="rcrop">
                 <h5>R-CROP</h5>
                 <p>This is my 1st place winning entry for the <a href="http://challenges.robotevents.com/challenge/30/entry/979" target="_blank"> 2013 Autodesk Sustainable Design Challenge</a>.</p>
                 <p>Home gardening is an important aspect of sustainability. By growing your own food, you help eliminate the
@@ -177,8 +185,15 @@
                     Planting) was created to help you maintain a successful and efficient garden almost effortlessly.</p>
                 <p><a href="R-CROP.pdf" target="_blank">PDF Documentation</a></p>
             </div>
-            <img class="grid-cell-full grid-cell-third-desktop" src="rcrop-1.png" alt="cad model of the r-crop system"/>
-            <img class="grid-cell-full grid-cell-third-desktop" src="rcrop-2.jpg" alt="sustainable features of the r-crop system"/>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rcrop-1.png" alt="cad model of the r-crop system"/>
+            </div>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rcrop-2.jpg" alt="sustainable features of the r-crop system"/>
+            </div>
+            <div class="grid-cell-full grid-cell-third-desktop">
+                <img src="rcrop-3.jpg" alt="r-crop system subassemblies"/>
+            </div>
         </section>
     </div>
     <div class="hide-on-mobile">&nbsp;</div> <!--Right column-->
