--- a/projects/code/index.html
+++ b/projects/code/index.html
@@ -55,8 +55,8 @@
         <hr/>
     </div>
 </section>
-<section class="grid">
-    <div class="grid-cell-full" id="voxelfuse">
+<section class="grid" id="voxelfuse">
+    <div class="grid-cell-full">
         <h3>VoxelFuse Library</h3>
     </div>
 <!--    <div class="grid-cell-full grid-cell-half-desktop">-->
@@ -70,8 +70,24 @@
         <p class="center-align">For more information, see my <a href="../../research/index.html#voxelfuse">research page</a>.</p>
     </div>
     <hr/>
-
-    <div class="grid-cell-full" id="websites">
+</section>
+<section class="grid" id="other">
+    <div class="grid-cell-full">
+        <h3>Embedded Systems</h3>
+    </div>
+    <div class="grid-cell-full grid-cell-third-desktop">
+        <a href="https://github.com/cdbrauer/EarthPod-Mini"><img src="https://gh-card.dev/repos/cdbrauer/EarthPod-Mini.svg"></a>
+    </div>
+    <div class="grid-cell-full grid-cell-third-desktop">
+        <a href="https://github.com/cdbrauer/Function-Pad"><img src="https://gh-card.dev/repos/cdbrauer/Function-Pad.svg"></a>
+    </div>
+    <div class="grid-cell-full grid-cell-third-desktop">
+        <a href="https://github.com/Arizona-Makers-Collective/Modular-USB-Hotkey-Controller"><img src="https://gh-card.dev/repos/Arizona-Makers-Collective/Modular-USB-Hotkey-Controller.svg"></a>
+    </div>
+    <hr/>
+</section>
+<section class="grid" id="websites">
+    <div class="grid-cell-full">
         <h3>Websites</h3>
     </div>
     <div class="grid-cell-full grid-cell-third-desktop">
@@ -87,16 +103,12 @@
         <a href="https://github.com/Make-A-Pede/Make-A-Pede-Website"><img src="https://gh-card.dev/repos/Make-A-Pede/Make-A-Pede-Website.svg"></a>
     </div>
     <hr/>
-
-    <div class="grid-cell-full" id="other">
+</section>
+<section class="grid" id="other">
+    <div class="grid-cell-full">
         <h3>Other</h3>
     </div>
-    <div class="grid-cell-full grid-cell-third-desktop">
-        <a href="https://github.com/cdbrauer/Function-Pad"><img src="https://gh-card.dev/repos/cdbrauer/Function-Pad.svg"></a>
-    </div>
-    <div class="grid-cell-full grid-cell-third-desktop">
-        <a href="https://github.com/Arizona-Makers-Collective/Modular-USB-Hotkey-Controller"><img src="https://gh-card.dev/repos/Arizona-Makers-Collective/Modular-USB-Hotkey-Controller.svg"></a>
-    </div>
+    <div class="grid-cell-full grid-cell-third-desktop hide-on-mobile">&nbsp;</div>
     <div class="grid-cell-full grid-cell-third-desktop">
         <a href="https://github.com/cdbrauer/Lane-Detection-EGR530"><img src="https://gh-card.dev/repos/cdbrauer/Lane-Detection-EGR530.svg"></a>
     </div>
