Temporarily disabled some home page links to incomplete pages

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
             <div class="grid-cell-full">
                 <h3>Projects</h3>
             </div>
-            <a href="projects/robotics/index.html#simulink" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+            <!--href="projects/robotics/index.html#simulink"-->
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="projects/robotics/simulink_robot.jpg" class="photo" alt="small robot"/>
                 <h4>Simulink Compatible Robot Platform</h4>
             </a>
@@ -162,13 +163,15 @@
                 <img src="projects/code/voxelfuse.jpg" class="photo" alt="voxel model">
                 <h4>VoxelFuse Library</h4>
             </a>
-            <a href="projects/other/index.html#fft" class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
+            <!--href="projects/other/index.html#fft"-->
+            <a class="grid-cell-full grid-cell-quarter-desktop card bg-dark">
                 <img src="projects/other/fft-w.jpg" class="photo" alt="fft analyzer device"/>
                 <h4>Arduino-Based FFT Analyzer</h4>
             </a>
         </div>
         <div class="grid">
-            <a href="projects/robotics/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <!--href="projects/robotics/index.html"-->
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-robot accent-color"></i>
                 <br/>
                 <div>Robotics</div>
@@ -183,7 +186,8 @@
                 <br/>
                 <div>Code</div>
             </a>
-            <a href="projects/other/index.html" class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
+            <!--href="projects/other/index.html"-->
+            <a class="grid-cell-half grid-cell-quarter-desktop button bg-dark">
                 <i class="fas fa-hammer accent-color"></i>
                 <br/>
                 <div>Other</div>
