--- a/projects/code/index.html
+++ b/projects/code/index.html
@@ -71,7 +71,7 @@
     </div>
     <hr/>
 </section>
-<section class="grid" id="other">
+<section class="grid" id="embedded">
     <div class="grid-cell-full">
         <h3>Embedded Systems</h3>
     </div>
