Fixed GitHub card for EarthPod

--- a/projects/code/index.html
+++ b/projects/code/index.html
@@ -76,7 +76,7 @@
         <h3>Embedded Systems</h3>
     </div>
     <div class="grid-cell-full grid-cell-third-desktop">
-        <a href="https://github.com/cdbrauer/EarthPod-Mini"><img src="https://gh-card.dev/repos/cdbrauer/EarthPod-Mini.svg"></a>
+        <a href="https://github.com/cdbrauer/EarthPod"><img src="https://gh-card.dev/repos/cdbrauer/EarthPod.svg"></a>
     </div>
     <div class="grid-cell-full grid-cell-third-desktop">
         <a href="https://github.com/cdbrauer/Function-Pad"><img src="https://gh-card.dev/repos/cdbrauer/Function-Pad.svg"></a>
